--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:postgres@localhost:5433/nextauthapp?schema=public"
+NEXTAUTH_SECRET="lol this is my super secret lol"
+NEXTAUTH_URL="http://localhost:3000"
